<?xml version="1.0"?>
<package>
  <name>path_following</name>
  <version>0.0.1</version>
  <description>The path_following package</description>
  <license>closed</license>
  <author email="1155096012@link.cuhk.edu.hk">Linhai Gui</author>
  <maintainer email="yukunlin@mail.ustc.edu.cn">Yu Kunlin</maintainer>
  <maintainer email="1155096012@link.cuhk.edu.hk">Linhai Gui</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>
